<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eye protection experts</string>
    <string name="action_settings">Settings</string>
    <string name="enable_filter">Enable</string>
    <string name="disable_filter">Disable</string>
    <string name="pick_color_btn">Pick color</string>
    <string name="start_filter_after_boot_completed">Start filter when boot complete</string>
    <string name="show_notification">Show notification</string>
    <string name="click_to_switch_state">Click to switch state</string>
    <string name="alpha_text">Alpha</string>
    <string name="red_text">Red</string>
    <string name="green_text">Green</string>
    <string name="blue_text">Blue</string>
    <string name="using_recommand_color">Recommand</string>
    <string name="toast_show_filter">Enable Eye protection experts</string>
    <string name="toast_hide_filter">Disable Eye protection experts</string>

    <string-array name="recommand_color">
        <item>Nature (Recommanded)</item>
        <item>Light Red</item>
        <item>Light Green</item>
        <item>Power saver</item>
        <item>Customized</item>
    </string-array>

</resources>