<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#aaaaaa" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayoutAdmob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/white_oval_bg"
                android:orientation="vertical" >

                <RadioGroup
                    android:id="@+id/enable_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/enable_filter"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-thin"
                        android:text="@string/enable_filter" />

                    <RadioButton
                        android:id="@+id/disable_filter"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-thin"
                        android:text="@string/disable_filter" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/white_oval_bg"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:maxLines="3"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="center_vertical"
                    android:text="@string/using_recommand_color"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/recommand_color_spinnner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="center" >
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/white_oval_bg"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:fontFamily="sans-serif-thin"
                        android:gravity="center"
                        android:text="@string/alpha_text" />

                    <SeekBar
                        android:id="@+id/alpha_seek_bar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:max="200" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:fontFamily="sans-serif-thin"
                        android:gravity="center"
                        android:text="@string/red_text" />

                    <SeekBar
                        android:id="@+id/red_seek_bar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:max="200" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:fontFamily="sans-serif-thin"
                        android:gravity="center"
                        android:text="@string/green_text" />

                    <SeekBar
                        android:id="@+id/green_seek_bar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:max="200" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:fontFamily="sans-serif-thin"
                        android:gravity="center"
                        android:text="@string/blue_text" />

                    <SeekBar
                        android:id="@+id/blue_seek_bar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:max="200" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/white_oval_bg"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/show_notification_check_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/show_notification" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>